[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.31"
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen-futures = "0.4"
models.workspace = true
anyhow.workspace = true
gloo-net = "0.4.0"
gloo-console = "0.3.0"
gloo-timers = "0.3.0"
gloo-utils = "0.2.0"
futures = "0.3.29"

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "HtmlInputElement",
    "HtmlDivElement",
    "CssStyleDeclaration",
]
